src/main/java/com/example/movieapp/error/exceptions/MovieAlreadyExistsException.java
package com.example.movieapp.error.exceptions;

public class MovieAlreadyExistsException extends RuntimeException {

    public MovieAlreadyExistsException(String message) {

        super(message);
    }
}

